Atribuir apoio funcionando

--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Configuracoes/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Configuracoes/Index.cshtml
@@ -61,6 +61,12 @@
                 <a class="btn btn-app bg-primary" href="/Beneficio/Index">
                     <i class="fas fa-plus-circle"></i> Benefício
                 </a>
+                <a class="btn btn-app bg-primary" href="/Capital/Index">
+                    <i class="fas fa-plus-circle"></i> Capital
+                </a>
+                <a class="btn btn-app bg-primary" href="/Apoio/Index">
+                    <i class="fas fa-plus-circle"></i> Apoio
+                </a>
                 <a class="btn btn-app bg-primary" href="/Organismo/Index">
                     <i class="fas fa-plus-circle"></i> Organismo
                 </a>
