--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -172,7 +172,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a asp-controller="Socio" asp-action="Index" class="nav-link">
+                                    <a href="/Socio/Index" class="nav-link">
                                         <i class="fas fa-group nav-icon"></i>
                                         <p>Todos</p>
                                     </a>
