--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Acesso/Login.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Acesso/Login.cshtml
@@ -23,8 +23,8 @@
         <!-- Theme style -->
         <link rel="stylesheet" type="text/css" href="~/dist/css/adminlte.min.css">
 </head>
-    <body style="background-image: url('img/app_img/vecteezy.jpg'); background-size:cover;height:100vh; width:100vw;">
-        <div class="hold-transition login-page" style="background-color: rgba(0,0,0,0.5)">
+<body style="background-image: url('img/app_img/fundo1.jpg'); background-size:cover;height:100vh; width:100vw;">
+        <div class="hold-transition login-page" style="background-color: rgba(0,0,0,0.6)">
             <div class="login-box">
                 <!-- /.login-logo -->
                 <div class="card card-outline card-primary">
