--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Socio/Details.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Socio/Details.cshtml
@@ -223,7 +223,7 @@
 
 							<div class="tab-pane fade" id="custom-tabs-one-messages" role="tabpanel" aria-labelledby="custom-tabs-one-messages-tab">
 								
-								<a class="btn btn-app bg-success" href="#" onclick="abrirModalAgregado('@Model.Id')" data-toggle="modal" data-target="#">
+								<a class="btn btn-app bg-success" href="/Apoio/Criar/@Model.Id">
 									<i class="fas fa-group"></i> Registar Apoio
 								</a>
 
