--- a/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Areas/Admin/Views/Home/Index.cshtml
@@ -85,11 +85,14 @@
                             <div class="card-img-overlay d-flex flex-column justify-content-center">
                                 <h5 class="card-title text-white mt-5 pt-2">CPF-CACL</h5>
                                 <p class="card-text pb-2 pt-1 text-white">
-                                    Lorem ipsum dolor sit amet, <br>
-                                    consectetur adipisicing elit <br>
-                                    sed do eiusmod tempor.
+                                    Somos uma associação mutualista e<br>
+                                    temos por finalidade a solidariedade entre os associados <br>
+                                    e os seus familiares, <br>
+                                    bem como a concessão de benefícios de segurança social, <br>
+                                    de saúde, a proteção social <br>
+                                    e promoção da qualidade de vida.
                                 </p>
-                                <a href="#" class="text-white">Last update 15 hours ago</a>
+                                <a href="#" class="text-white">Existimos desde 2019</a>
                             </div>
                         </div>
                     </div>
