--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Dependente/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Dependente/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
+﻿
 @using CPF_CACL.GestaoSocio.Aplication.ViewModel;
 
 @model IEnumerable<DependenteViewModel>
@@ -25,7 +22,7 @@
             <nav class="col-12 col-md-12 col-sm-12" aria-label="breadcrumb" role="navigation">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/Home/Index">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Listagem de Agregados</li>
+                    <li class="breadcrumb-item active" aria-current="page">Listagem de Dependentes</li>
                 </ol>
             </nav>
         </div>
