--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Apoio/Criar.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Apoio/Criar.cshtml
@@ -84,6 +84,13 @@
                                                 <span asp-validation-for="Descricao" class="text-danger"></span>
                                             </div>
 
+
+                                            <div class="col-12 col-sm-6 col-md-3 espaco-input">
+                                                <label asp-for="DataApoio" class="control-label required"> Data do Apoio </label>
+                                                <input type="date" asp-for="DataApoio" value="@DateTime.Now.ToString("dd-MM-yyyy")" id="DataApoio" class="form-control" data-val-required="" />
+                                                <span asp-validation-for="DataApoio" class="text-danger"></span>
+                                            </div>
+
                                             <div class="col-12 col-sm-6 col-md-3 espaco-input">
                                                 <label asp-for="Valor" class="control-label">Valor (AKZ) </label>
                                                 <input asp-for="Valor" type="number" id="Valor" class="form-control" />
@@ -121,7 +128,8 @@
                                         <th class="text-left" style="display:none">Socio ID</th>
                                         <th>Descrição</th>
                                         <th>Valor</th>
-                                        <th>Ação</th>
+                                        <th>Data do Apoio</th>
+                                        <th class="text-right">Ação</th>
                                     </tr>
                                 </thead>
                                 <tbody>                                    
@@ -151,7 +159,7 @@
                             </div>
 
                             <div class="form-group">
-                                <button type="button" onclick="AdicionarApoio()" id="concluir" class="btn btn-success ml-auto">Adicionar</button>
+                                <button type="button" onclick="AdicionarApoio()" id="concluir" class="btn btn-success float-right ml-auto">Adicionar</button>
                             </div>
                         </div>
                     </div>
